# progra2-project-2-app2

./: Json completo
archivos_csv/: enfermedades.csv
src/: Analisis1.cpp  Analisis1.h  Analisis2.cpp  Analisis2.h  Analisis3.cpp  Analisis3.h  AnalisisSrategy.cpp  AnalisisSrategy.h  CMakeLists.txt  Enfermedad.cpp  Enfermedad.h  FileManager.cpp  FileManager.h  Menu.cpp  Menu.h  ObjetoBase.cpp  ObjetoBase.h  Paciente.cpp  Paciente.h  ReadManager.cpp  ReadManager.h  main.cpp
tst/: main.cpp
